Release Note

* 9/12/2014
  * cleanup for reqID
  * added a hint to getOutputFiles_JEDI
  * reduced fetch size in getOutputFiles_JEDI

* 9/11/2014
  * added protection to getScoutData against widely distributed input sizes
  * fixed AtlasAnalJobBroker to take effective input size into account for walltime

* 9/10/2014
  * fixed undefined variables in JediDBProxy
  * added addNthFieldToLFN

* 9/8/2014
  * fixed file lookup for container
  * introduced trn_unknown
  * added protection against changed comm_parameter

* 9/7/2014
  * removing duplicated panda.um

* 9/3/2014
  * changed AtlasDDM to use listDatasets2
  * changed TR to set proper status/error when registration is failed

* 9/2/2014
  * changed AtlasDDM to work with dq2 and rucio
  * updating startTime at submitssion or retry
  * changed pending killer to take startTime into account

* 8/29/2014
  * fixed getAnalSitesWithData
  * added fixedSandbox
  * setting 0 for SKIPEVENTS when unspecified
  * resetting cloud and site

* 8/27/2014
  * fixed retryTask for running inputs
  * not to overwite useScout when incexec
  * disabled file lookup for merge jobs
  * keeping trn_log

* 8/26/2014
  * fixed JG to bunch of datasets for each task in a single cycle
  * introduced max num of datasets in getTasksTobeProcessed 
  * replacing LS in splitRule
  * fixed retryTask

* 8/25/2014
  * fixed JG for merging with only logs

* 8/24/2014
  * reusing lib.tgz when DDM endpoints are shared
  * resetting nFiles and nEvents when incexec
  * using firstSubmission

* 8/22/2014
  * fixed TC to delete only existing params for incexec

* 8/21/2014
  * adding All to email notification when all input succeeded
  * updating nFiles of output/log/lib datasets when the task is done

* 8/20/2014
  * added protection against large --nGBPerJob
  * fixed JG to use MB in maxDiskCount
  * fixed JG not to include input size in maxDiskCount for remoteIO sites
  * fixed retryTask for task with multiple inputs

* 8/19/2014